# darajadevToolkit

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE-GUIDE.md  CI-PIPELINE-EXPLAINED.md  CONTRIBUTING.md  README.md  dev.sh  docker-compose.yml  docker-test.sh  eslint.config.mjs  package-lock.json  package.json  test-webhook-receiver.ts  tsconfig.base.json
.github/workflows/: ci.yml
cli/: .dockerignore  =64  DEVELOPMENT.md  Dockerfile  README.md  ci-stage.md  goodRead.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cli.py
cli/src/daraja_cli/: __init__.py  main.py
cli/src/daraja_cli/commands/: auth.py  config.py  env.py  monitor.py  test.py
cli/src/daraja_cli/utils/: api.py  config.py
dashboard/: .env.local.example  .eslintrc.json  .gitignore  Dockerfile  README.md  ci-stage.md  netlify.toml  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
dashboard/.next/: trace
dashboard/.next/cache/: .rscinfo
dashboard/.next/server/: server-reference-manifest.js  server-reference-manifest.json
dashboard/dashboard-ui/: index.html
delivery-worker/: .dockerignore  .gitignore  Dockerfile  README.md  ci-stage.md  package.json  test-api-integration.ts  test-worker.ts  tsconfig.json
delivery-worker/src/: worker.ts
docs/: drizzle-setup.md  queue.md
shared/: package.json  tsconfig.json
shared/src/: index.ts
webhook-service/: .gitignore  Dockerfile  README.md  bunfig.toml  ci-stage.md  drizzle.config.ts  index.ts  migration-user-retry-settings.sql  package.json  test-dlq.ts  test-priorities.ts  test-priority-backlog.ts  test-priority.ts  test-queue.js  test-queue.ts  test-user-retry.ts  tsconfig.json
webhook-service/src/: requests.http  server.ts  test-validation.http  testfeatures.http
(+98 files in other folders)
